fix iOS button spacing

--- a/index.css
+++ b/index.css
@@ -96,3 +96,9 @@ button.roll-dice {
    white-space: nowrap;
    border: 0;
 }
+
+@media (max-width: 450px) {
+   .dice-container {
+      gap: 15px;
+   }
+}
